# EvoTwin-NP

./: README.md
EvoTwin-NP_Explanatory document/: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
EvoTwin-NP_Explanatory document/docs/: overview.md
EvoTwin-NP_Explanatory document/examples/indoor_air/: README.md  config.yaml
EvoTwin-NP_Explanatory document/src/evotwinnp/: cli.py  data.py  eval_np.py  evo_search.py  losses.py  models.py  prototypes.py  train.py  utils.py
EvoTwin-NP_Explanatory document/src/scripts/: run_evo_search.sh  run_indoor_example.sh
EvoTwin-NP_Explanatory document/tests/: test_sanity.py
