[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evotwinnp"
version = "0.0.1"
description = "Dual-loop evolutionary detection under Neyman–Pearson constraints."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "typer",
  "dtw-python",
  "statsmodels"
]

[project.scripts]
evotwinnp = "evotwinnp.cli:main"
